# EDControls

./: .gitignore  README.md  app.py  forms.py  models.py  pyproject.toml
migrations/: commands.json  devices.json
migrations/versions/: 39ba8ce58396_initial_migration.py  760d07dec6df_commands.py  996f76cf161f_.py  e990ea050141_devices.py
static/js/: toggle-theme.js
templates/: base.html  binds.html  index.html
