[tool.poetry]
name = "edcontrols"
version = "0.1.0"
description = "A reference card maker for Elite: Dangerous controller bindings"
authors = ["Bruno Marques <bruno@bmarques.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
lxml = "^4.9.3"
flask-sqlalchemy = "^3.1.1"
bootstrap-flask = "^2.3.2"
flask-wtf = "^1.2.1"
flask-talisman = "^1.1.0"
flask-migrate = "^4.0.5"

[tool.poetry.group.dev.dependencies]
flask-shell-ipython = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
